data/forge_javadoc/1.7.10/processed/net_minecraft_creativetab_CreativeTabs.md
# CreativeTabs

**Inheritance:** java.lang.Object → net.minecraft.creativetab.CreativeTabs

## Class signature

```java
public abstract class CreativeTabs extends java.lang.Object
```

## Constructors

- `CreativeTabs(int p_i1853_1_, java.lang.String p_i1853_2_)`

## Methods

- `void addEnchantmentBooksToList(java.util.List p_92116_1_, EnumEnchantmentType ... p_92116_2_)`
- `void displayAllReleventItems(java.util.List p_78018_1_)`
- `boolean drawInForegroundOfTab()`
- `EnumEnchantmentType [] func_111225_m()`
- `boolean func_111226_a(EnumEnchantmentType p_111226_1_)`
- `CreativeTabs func_111229_a(EnumEnchantmentType ... p_111229_1_)`
- `int func_151243_f()`
- `java.lang.String getBackgroundImageName()`
- `ItemStack getIconItemStack()`
- `int getTabColumn()`
- `abstract Item getTabIconItem()`
- `int getTabIndex()`
- `java.lang.String getTabLabel()`
- `java.lang.String getTranslatedTabLabel()`
- `boolean isTabInFirstRow()`
- `CreativeTabs setBackgroundImageName(java.lang.String p_78025_1_)`
- `CreativeTabs setNoScrollbar()`
- `CreativeTabs setNoTitle()`
- `boolean shouldHidePlayerInventory()`

## Fields

- `static CreativeTabs [] creativeTabArray`
- `static CreativeTabs tabAllSearch`
- `static CreativeTabs tabBlock`
- `static CreativeTabs tabBrewing`
- `static CreativeTabs tabCombat`
- `static CreativeTabs tabDecorations`
- `static CreativeTabs tabFood`
- `static CreativeTabs tabInventory`
- `static CreativeTabs tabMaterials`
- `static CreativeTabs tabMisc`
- `static CreativeTabs tabRedstone`
- `static CreativeTabs tabTools`
- `static CreativeTabs tabTransport`